# Intelligent-Systems-Techniques

1 Entrega/: 1.4
2 Entrega/action_lib_scb/: package.xml
2 Entrega/action_lib_scb/launch/: server-client.launch
2 Entrega/action_lib_scb/src/: myClientLite.cpp  myPlannerLite.cpp  myPlannerLite.h  myServerLite.cpp
3 Entrega/my_astar_planner/: package.xml
3 Entrega/my_astar_planner/src/: myAstarPlanner.cpp
4 Entrega/: problema-dominio2.pddl
4 Entrega/R1/: d1.pddl
4 Entrega/R1/Ejercicios/: d1.pddl  ej1p1.pddl  ej2p1.pddl  ej3p1.pddl  ej4p2.pddl  ej4p3.pddl
4 Entrega/R1/Memoria/: practica3.aux  practica3.blg  practica3.lof  practica3.out  practica3.tex  practica3.toc  preambuloSimple.tex
4 Entrega/R1/Metric-FF/Metric-FF/: ff
4 Entrega/R1/Metric-FF/Metric-FF/Ejercicios/: d2.pddl  d3.pddl  d4.pddl  ej3p2.pddl  ej4p1.pddl
4 Entrega/R2/: practica3-2.aux  practica3-2.blg  practica3-2.lof  practica3-2.tex  practica3-2.toc
4 Entrega/materialEjercicios/: Primitivas-ZenoTravel.pddl  dominio1.pddl  dominio2.pddl  htnp.exe.stackdump  zenotravel-V01.pddl  zenotravel-V02.pddl  zenotravel-V03.pddl
